# htn-2023

./: README.md
client/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
client/app/: layout.tsx  page.tsx
client/app/calendar/: page.tsx
client/app/components/: navbar.jsx  navbar.tsx  searchoverlay.jsx
client/app/data/: data.json
client/app/docs/: page.tsx
client/app/note/[_id]/: page.tsx
client/app/pages/: calendar.tsx  docs.tsx
server/: .gitignore  pyproject.toml  run_server.sh
server/server/: app.py  models.py  routes.py
server/server/aai/: stt.py
server/server/cohere/: chat.py  genTitle.py  semanticSearch.py
server/server/gcs/: init.py  storage.py  stt.py
server/server/util/: convert_sec_to_timestamp.py  find_dominant_speaker.py
